--- a/springboot-mybatis/src/main/resources/application.properties
+++ b/springboot-mybatis/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://localhost:3306/springbootdb?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://rm-2ze7y3rt52h0k7w97o.mysql.rds.aliyuncs.com:3306/electric?useUnicode=true&characterEncoding=gbk&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.password=Wendao0728
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## Mybatis 配置
